<resources>
    <string name="app_name">calculationTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_message">Calculation Test</string>
    <string name="title_image_info">Titleimageinfo</string>
    <string name="title_button_message">Enter</string>
    <string name="high_score_message">highscore:%d</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonClear">C</string>
    <string name="buttonSubmit">OK</string>
    <string name="add_symbol">+</string>
    <string name="equal_symbol">=</string>
    <string name="question_mark">?</string>
    <string name="current_score">SCORE:%d</string>
    <string name="input_indicatar">Your answer:</string>

    <string name="lose_image_message">lose image</string>
    <string name="win_image_message">win image</string>
    <string name="lose_message">you lose</string>
    <string name="win_message">you win</string>
    <string name="button_back_to_title">back</string>
    <string name="quit_dialog_title">Are you sure to quit?</string>
    <string name="dialog_porsitive_message">OK</string>
    <string name="dialog_nagative_message">CANCEL</string>
    <string name="todo">TODO</string>

</resources>